<resources>
    <string name="app_name">JulianOnAndroid</string>
    <string name="Repeat">Powtarzaj</string>
    <string name="Practice">Ćwicz</string>
    <string name="add_repetition">Dodaj powtorzenie</string>
    <string name="two_sides">W dwie strony</string>
    <string name="name">Nazwa</string>
    <string name="topic">Temat</string>
    <string name="add">Dodaj</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="do_repetition">Rób</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="question">Pytanie</string>
    <string name="answer">Odpowiedź</string>
    <string name="checkAnswer">Sprawdź odpowiedź</string>
    <string name="remaining">Pozostało</string>
    <string name="yourAnswer">Twoja odpowiedź</string>
    <string name="know">Umiem</string>
    <string name="dontKnow">Nie umiem</string>

</resources>