<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.AddRepetitionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <EditText
            android:id="@+id/txtRepetitionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/add_repetition_horizontal_margins"
            android:layout_marginTop="@dimen/add_repetition_form_spaces"
            android:layout_marginRight="@dimen/add_repetition_horizontal_margins"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtRepetitionTopic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/add_repetition_horizontal_margins"
            android:layout_marginTop="@dimen/add_repetition_form_spaces"
            android:layout_marginRight="@dimen/add_repetition_horizontal_margins"
            android:ems="10"
            android:hint="@string/topic"
            android:inputType="textPersonName" />

        <Switch
            android:id="@+id/switchIsReverse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/add_repetition_horizontal_margins"
            android:layout_marginTop="@dimen/add_repetition_form_spaces"
            android:layout_marginRight="@dimen/add_repetition_horizontal_margins"
            android:text="@string/two_sides" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onAddRepetition"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>