<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.MainActivity">

    <LinearLayout
        android:layout_width="209dp"
        android:layout_height="265dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/menu_btn_spaces"
            android:text="@string/Repeat" />

        <Button
            android:id="@+id/btnPratice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/menu_btn_spaces"
            android:text="@string/Practice" />

        <Button
            android:id="@+id/btnAddRepetition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/menu_btn_spaces"
            android:onClick="onCreateRepetition"
            android:text="@string/add_repetition" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>