<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.AddNewQuestionActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onAddQuestion"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="onAddQuestion"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <EditText
            android:id="@+id/txtQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/question"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtAnswer"
            android:layout_width="match_parent"
            android:layout_height="500dip"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/answer"
            android:inputType="textMultiLine" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>